catching exception in junit5