@@ -19,7 +19,7 @@ public class Java8Questions {
 	public static List<Integer> returnOnlyEven(Integer[] arg) {
 		
 		List<Integer> list = Arrays.asList(arg);
-		list = list.stream().filter(p -> p % 2 == 0).toList();
+		list = list.stream().filter(p -> p % 2 == 0).collect(Collectors.toList());
 		return list;
 		
 	}
@@ -215,7 +215,7 @@ public class Java8Questions {
 	
 	public static Boolean findElementTrueOrFalse(String[] arg, String key) {
 		
-		return Arrays.asList(arg).stream().anyMatch(key::contains);
+		return Arrays.asList(arg).stream().anyMatch(key::equalsIgnoreCase);
 	}
 	
 	
